--- a/src/ulp/vista/Principal.form
+++ b/src/ulp/vista/Principal.form
@@ -143,12 +143,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanelEscritorio" alignment="1" max="32767" attributes="0"/>
+          <Component id="jPanelEscritorio" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanelEscritorio" alignment="1" max="32767" attributes="0"/>
+          <Component id="jPanelEscritorio" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
